# LectureLens

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_recordings_table.py  003_create_segments_table.py
backend/app/: main.py
backend/app/api/: auth.py  recordings.py
backend/app/core/: config.py  deps.py  limiter.py  security.py  storage.py
backend/app/db/: base.py  models.py
backend/app/ml/: audio_validator.py  chunker.py  embedder.py  transcriber.py  vector_store.py
backend/app/services/: auth.py  recordings.py  search_service.py
backend/app/worker/: pipeline.py  settings.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/integration/: conftest.py  test_auth.py  test_recordings.py  test_search.py
backend/tests/unit/: conftest.py  test_audio_validator.py  test_auth_api.py  test_auth_service.py  test_chunker.py  test_config.py  test_cors.py  test_embedder.py  test_pipeline_embedding.py  test_recordings_api.py  test_search_api.py  test_search_service.py  test_security.py  test_storage.py  test_transcriber.py  test_vector_store.py  test_worker_pipeline.py
docs/: DECISIONS.md  SECURITY.md  SPEC.md
docs/superpowers/plans/: 2026-06-14-auth.md
frontend/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/recordings/: page.tsx
frontend/components/SearchBar/: SearchBar.tsx
frontend/components/SearchResults/: SearchResults.tsx
frontend/components/SpeakerFilter/: SpeakerFilter.tsx
frontend/components/auth/: AuthProvider.tsx
frontend/components/player/: AudioPlayer.tsx  TranscriptPanel.tsx
frontend/components/recordings/: RecordingCard.tsx  StatusBadge.tsx  UploadButton.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/lib/hooks/: useAudioPlayer.ts
frontend/tests/: setup.ts  smoke.test.tsx
frontend/tests/components/: AuthProvider.test.tsx  RecordingCard.test.tsx  SearchBar.test.tsx  SearchResults.test.tsx  SpeakerFilter.test.tsx  StatusBadge.test.tsx  TranscriptPanel.test.tsx  UploadButton.test.tsx
frontend/tests/hooks/: useAudioPlayer.test.tsx
frontend/tests/lib/: utils.test.ts
frontend/tests/mocks/: handlers.ts
ml/scripts/: poc_validation.py
(+5 files in other folders)
